--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 </head>
 <body>
     <header>
-        <h1>Your Name - Research Portfolio</h1>
+        <h1>Ethan Thomas Johnson - Research Portfolio</h1>
     </header>
     <nav>
         <a href="#bio">Bio</a>
@@ -103,15 +103,15 @@
             <div class="main-content">
                 <section id="bio">
                     <h2>Bio</h2>
-                    <p>Provide your bio here, including your background, expertise, and interests.</p>
+                    <p>PI am interested in creating explainable artificial intelligence models for medical diagnosis.</p>
                 </section>
                 <section id="projects">
                     <h2>Projects</h2>
-                    <p>Detail your projects here. You can discuss what each project is about, the technologies used, and the outcomes.</p>
+                    <p>RAMDS: Retrieval Augmented Medical Diagnosis System for Explainable Breast Cancer Classification from Ultrasound Images </p>
                 </section>
                 <section id="research">
                     <h2>Current Research Areas</h2>
-                    <p>Discuss your current research areas, such as thyroid nodules, thyroid cancer, diabetes, and applications of artificial intelligence in medical research.</p>
+                    <p>Applications of artificial intelligence in medical research.</p>
                 </section>
             </div>
             <div class="profile-pic">
