--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 </section>
             </div>
             <div class="profile-pic">
-                <img src="https://github.com/ZappyFountain/zappyfountain.github.io/blob/main/my_pixar.png" alt="Your Name">
+                <img src="https://github.com/ZappyFountain/zappyfountain.github.io/blob/main/my_pixar.png">
             </div>
         </div>
     </div>
