--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <div class="main-content">
                 <section id="bio">
                     <h2>Bio</h2>
-                    <p>PI am interested in creating explainable artificial intelligence models for medical diagnosis.</p>
+                    <p>I am interested in creating explainable artificial intelligence models for medical diagnosis.</p>
                 </section>
                 <section id="projects">
                     <h2>Projects</h2>
