--- a/index.html
+++ b/index.html
@@ -2,125 +2,81 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Research Portfolio</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Your Research Portfolio</title>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            line-height: 1.6;
-        }
-
-        .container {
-            width: 80%;
-            margin: auto;
-            overflow: hidden;
-        }
-
-        header {
-            background: #333;
-            color: #fff;
-            padding-top: 30px;
-            min-height: 70px;
-            border-bottom: #0779e4 3px solid;
-        }
-
-        header h1 {
-            text-align: center;
-            margin: 0;
-            padding-bottom: 10px;
-        }
-
-        nav {
-            display: flex;
-            justify-content: center;
-            background: #444;
-            padding: 5px;
-        }
-
-        nav a {
-            color: #fff;
-            text-decoration: none;
-            padding: 5px 20px;
-            font-size: 18px;
-        }
-
-        nav a:hover {
-            background: #055ea9;
-        }
-
-        .content {
-            display: flex;
-            justify-content: space-between;
-            margin-top: 20px;
-        }
-
-        .main-content {
-            flex: 3;
-        }
-
-        .profile-pic {
-            flex: 1;
-            text-align: center;
-            padding: 10px;
-        }
-
-        .profile-pic img {
-            max-width: 100%;
-            height: auto;
-            border-radius: 50%; /* Makes the image round */
-        }
-
-        section {
-            padding: 20px;
-            margin-bottom: 20px;
-        }
-
-        footer {
-            background: #333;
-            color: #fff;
-            text-align: center;
-            padding: 10px;
-            position: fixed;
-            left: 0;
-            bottom: 0;
-            width: 100%;
-        }
+        body { font-family: 'Open Sans', sans-serif; margin: 0; padding: 0; }
+        .container { max-width: 1200px; margin: auto; padding: 20px; }
+        .container-fluid { width: 100%; padding: 20px; background: #f8f9fa; }
+        ul { list-style-type: none; margin: 0; padding: 0; overflow: hidden; }
+        li { float: left; }
+        li a { display: block; color: black; text-align: center; padding: 14px 16px; text-decoration: none; }
+        li strong { font-weight: 600; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); gap: 20px; }
+        section { background: #ffffff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+        h2, h3 { margin: 10px 0; }
+        p { line-height: 1.6; }
+        figure { margin: 20px 0; }
+        figcaption { font-size: 14px; }
+        img { width: 100%; height: auto; border-radius: 8px; }
+        form { display: grid; grid-template-columns: 1fr 1fr auto; gap: 10px; align-items: end; }
+        input { padding: 10px; border: 1px solid #ccc; border-radius: 4px; }
+        button { padding: 10px 20px; background: #007bff; color: #ffffff; border: none; border-radius: 4px; cursor: pointer; }
+        footer { text-align: center; padding: 20px; }
+        footer a { color: #007bff; text-decoration: none; }
     </style>
 </head>
 <body>
-    <header>
-        <h1>Ethan Thomas Johnson - Research Portfolio</h1>
-    </header>
-    <nav>
-        <a href="#bio">Bio</a>
-        <a href="#projects">Projects</a>
-        <a href="#research">Current Research</a>
-    </nav>
-    <div class="container">
-        <div class="content">
-            <div class="main-content">
-                <section id="bio">
-                    <h2>Bio</h2>
-                    <p>I am interested in creating explainable artificial intelligence models for medical diagnosis.</p>
-                </section>
-                <section id="projects">
-                    <h2>Projects</h2>
-                    <p>RAMDS: Retrieval Augmented Medical Diagnosis System for Explainable Breast Cancer Classification from Ultrasound Images </p>
-                </section>
-                <section id="research">
-                    <h2>Current Research Areas</h2>
-                    <p>Applications of artificial intelligence in medical research.</p>
-                </section>
-            </div>
-            <div class="profile-pic">
-                <img src="https://github.com/ZappyFountain/zappyfountain.github.io/blob/main/my_pixar.png">
-            </div>
-        </div>
+
+<nav class="container-fluid">
+    <ul>
+        <li><strong>Your Name</strong></li>
+    </ul>
+    <ul>
+        <li><a href="#research">Research</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#blog" role="button">Blog</a></li>
+    </ul>
+</nav>
+
+<main class="container">
+    <div class="grid">
+        <section id="research">
+            <hgroup>
+                <h2>Research Interests</h2>
+                <h3>Medical and AI Research</h3>
+            </hgroup>
+            <p>Describe your research interests in medical and AI fields, focusing on specific areas or questions you are passionate about.</p>
+            <figure>
+                <img src="https://source.unsplash.com/random/800x600?medical,ai" alt="Medical AI">
+                <figcaption>Your Profile Picture</figcaption>
+            </figure>
+            <h3>Featured Research Project</h3>
+            <p>Briefly describe your featured research project, its goals, methodology, and any significant findings or impacts it has had in the medical and AI community.</p>
+        </section>
     </div>
-    <footer>
-        <p>Contact Information | Social Media Links</p>
-    </footer>
+</main>
+
+<section aria-label="Subscribe example">
+    <div class="container">
+        <article>
+            <hgroup>
+                <h2>Stay Updated</h2>
+                <h3>Subscribe to my blog</h3>
+            </hgroup>
+            <form class="grid">
+                <input type="text" id="firstname" name="firstname" placeholder="Your Name" aria-label="Your Name" required>
+                <input type="email" id="email" name="email" placeholder="Your Email" aria-label="Your Email" required>
+                <button type="submit" onclick="event.preventDefault()">Subscribe</button>
+            </form>
+        </article>
+    </div>
+</section>
+
+<footer class="container">
+    <small><a href="https://github.com/yourusername">GitHub</a> • <a href="https://yourblog.com">Blog</a></small>
+</footer>
+
 </body>
 </html>
